--- a/index.html
+++ b/index.html
@@ -22,7 +22,85 @@
     />
     <link rel="stylesheet" href="././css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="text-center">ESTATE '24</h1>
+    </header>
+    <main>
+      <div class="row justify-content-center mx-4 mt-4">
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Seconda riga di card centrata -->
+      <div class="row justify-content-center mx-3">
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-4">
+          <div class="card" style="width: 90%">
+            <img src="./img/img600.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 
   <!--BOOTSTRAP JS-->
   <script
