--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <h1 class="text-center">ESTATE '24</h1>
     </header>
     <main>
-      <div class="row justify-content-center mx-4 mt-4">
-        <div class="col-md-3 mb-4">
+      <div class="row justify-content-center mx-4 mt-4" id="row">
+        <!-- <div class="col-md-3 mb-4">
           <div class="card" style="width: 90%">
             <img src="./img/img600.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -60,12 +60,12 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
 
       <!-- Seconda riga di card centrata -->
-      <div class="row justify-content-center mx-3">
-        <div class="col-md-3 mb-4">
+      <div class="row justify-content-center mx-3" id="row-2">
+        <!-- <div class="col-md-3 mb-4">
           <div class="card" style="width: 90%">
             <img src="./img/img600.png" class="card-img-top" alt="..." />
             <div class="card-body">
@@ -97,7 +97,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
   </body>
