--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row justify-content-center mx-4 mt-4" id="row"></div>
     </main>
   </body>
-  <div id="layover" class="">
+  <div id="layover" class="d-none">
     <button class="btn btn-primary">Chiudi</button>
   </div>
   <!--BOOTSTRAP JS-->
