--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!--GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <!--FONT AWESOME-->
     <link
       rel="stylesheet"
@@ -24,7 +32,7 @@
   </head>
   <body>
     <header class="header">
-      <h1 class="text-center">ESTATE '24</h1>
+      <h1 class="text-center edu-tas-beginner">ESTATE '24</h1>
     </header>
     <main>
       <div class="row justify-content-center mx-4 mt-4" id="row"></div>
@@ -32,6 +40,7 @@
   </body>
   <div id="layover" class="d-none">
     <button class="btn btn-primary">Chiudi</button>
+    <img id="overlayImage" src="" alt="Overlay Image" />
   </div>
   <!--BOOTSTRAP JS-->
   <script
